--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
 			<artifactId>spring-hateoas</artifactId>
 			<version>2.0.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts-core</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
