--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://simone:mongopass@todocluster.yr3neg6.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=todos
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
