build(security): secrets properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://simone:mongopass@todocluster.yr3neg6.mongodb.net/?retryWrites=true&w=majority
+spring.config.import=optional:secrets.properties
+
+# MongoDB Config
 spring.data.mongodb.database=todos
 
-# App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
+# JWT Secret token
 bezkoder.app.jwtExpirationMs= 86400000
