--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>3.1.0</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
