--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.data.mongodb.database=todos
 
 # JWT Secret token
 bezkoder.app.jwtExpirationMs= 1800000
+
+# SonarQube
+logging.level.org.springframework=DEBUG
