--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,12 @@ jobs:
           server-password: ${{ secrets.GITHUB_TOKEN }}
           overwrite-settings: true
           job-status: 'success'
-      - name: 'Create env file'
+      - name: Create env file
         run: |
             echo "${{ secrets.ENV_FILE }}" > .env
+      - name: Create secrets.properties file
+        run: |
+            echo "${{ secrets.SECRETS_PROPS_FILE }}" > ./src/main/resources/secrets.properties
       - name: Cache SonarQube packages
         uses: actions/cache@v2
         with:
