--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,12 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Create env file
+      run: |
+        echo "${{ secrets.ENV_FILE }}" > .env
+    - name: Create secrets.properties file
+      run: |
+        echo "${{ secrets.SECRETS_PROPS_FILE }}" > ./src/main/resources/secrets.properties
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
