--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
 spring.config.import=optional:secrets.properties
 
-# MongoDB Config
-spring.data.mongodb.database=todos
+## MongoDB Config
+#spring.data.mongodb.database=todos
 
 # JWT Secret token
 bezkoder.app.jwtExpirationMs= 1800000
+
+# Debug
+#logging.level.org.springframework=DEBUG
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/tododb
+spring.datasource.username= newuser
+spring.datasource.password= password
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
