chore(postgresql): refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.config.import=optional:secrets.properties
 
-## MongoDB Config
-#spring.data.mongodb.database=todos
-
 # JWT Secret token
 bezkoder.app.jwtExpirationMs= 1800000
 
 # Debug
 #logging.level.org.springframework=DEBUG
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
