--- a/src/main/resources/secretsExample.properties
+++ b/src/main/resources/secretsExample.properties
@@ -1,2 +1,13 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@todocluster.yr3neg6.mongodb.net/?retryWrites=true&w=majority
-bezkoder.app.jwtSecret= secretKey
+bezkoder.app.jwtSecret= SecretKey
+
+spring.datasource.url= jdbc:postgresql://localhost:{port}/{database}}
+spring.jpa.properties.hibernate.default_schema= schema
+
+spring.datasource.username= username
+spring.datasource.password= password
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
